--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,8 +22,9 @@ jobs:
     
       - name: Prisma Cloud image scan
         id: scan
-        uses: PaloAltoNetworks/prisma-cloud-scan@v1.2.0
+        uses: PaloAltoNetworks/prisma-cloud-scan@v1
         with:
           pcc_console_url: ${{ secrets.PCC_CONSOLE_URL }}
-          api-key: ${{ secrets.BC_API_KEY }}
+          pcc_user: ${{ secrets.PCC_USER }}
+          pcc_pass: ${{ secrets.PCC_PASS }}
           image_name: ${{ env.IMAGE_NAME }}
