--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v3
     
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+        run: docker build -t $IMAGE_NAME .
     
       - name: Prisma Cloud Scan
         id: scan
