--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,10 +1,5 @@
-name: Docker Image CI
+on: [ push, workflow_dispatch ]
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 env:
   IMAGE_NAME: ${{ github.repository }}:${{ github.sha }}
 
@@ -15,9 +10,9 @@ jobs:
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v3
-    
-      - name: Build the Docker image
+        uses: actions/checkout@v2
+
+      - name: Build the image
         run: docker build -t $IMAGE_NAME .
     
       - name: Prisma Cloud Scan
