Update image name and checkout version to v2- docker-image.yml

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,11 +13,11 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build the image
-        run: docker build -t $IMAGE_NAME .
+        run: docker build -t mh-image .
     
       - name: Prisma Cloud image scan
         id: scan
-        uses: PaloAltoNetworks/prisma-cloud-scan@v1.5
+        uses: PaloAltoNetworks/prisma-cloud-scan@v2
         with:
           pcc_console_url: ${{ secrets.PCC_CONSOLE_URL }}
           pcc_user: ${{ secrets.PCC_USER }}
