Update azure-pipelines_kubernetes_labq4_v2.yml for Azure Pipelines

--- a/azure-pipelines_kubernetes_labq4_v2.yml
+++ b/azure-pipelines_kubernetes_labq4_v2.yml
@@ -21,7 +21,7 @@ stages:
         command: buildAndPush
         #repository: $(imageRepository)
         dockerfile: /Dockerfile
-        containerRegistry: labq4containerregistry
+        containerRegistry: labq4containerregistry.azurecr.io
         tags: |
           $(Build.BuildId)
 
